# mediasample

./: .gitignore  README.md  build.sh
ai/: README.md
ai/detection/: CMakeLists.txt  run.sh  yolo3detection.cpp
ai/docker/run/: run.sh
ai/openpose/: CMakeLists.txt  openpose.cpp  run.sh
ai/tracking/: CMakeLists.txt  build.sh  getGoturnModel.sh  run.sh  tracking.cpp
camera/android/CameraApp/: .gitignore
camera/android/CameraApp/app/: build.gradle.kts
camera/android/CameraApp/app/src/main/: AndroidManifest.xml
camera/android/CameraApp/app/src/main/java/com/example/cameraapp/: MainActivity.java
camera/android/CameraApp/app/src/main/res/layout/: activity_main.xml
camera/ios/CameraApp/: .gitignore  AppDelegate.m  CMakeLists.txt  CameraViewController.h  CameraViewController.m  Info.plist  main.m
ffmpeg_sample/: .gitignore  README.md  build.sh  ffmpeg.drawio
ffmpeg_sample/sample_decoder/: Makefile  sample_decoder.c
ffmpeg_sample/sample_encoder/: sample_encoder.c
ffmpeg_sample/simpleAudioEncoderBasedOnFFmpeg/: README.md  simpleAudioEncoderBasedOnFFmpeg.cpp
ffmpeg_sample/simpleEncoderBasedOnFFmepg/: README.md
ffmpeg_sample/simpleEncoderBasedOnVPX/: CMakeLists.txt  README.md  simpleEncoderBasedOnVPX.cpp
ffmpeg_sample/simpleEncoderBasedOnX264/: README.md
ffmpeg_sample/simpleEncoderBasedOnX265/: README.md  simpleEncoderBasedOnX265.cpp
ffmpeg_sample/simpleEncoderPureBasedOnFFmpeg/: CMakeLists.txt  build.sh  simpleEncoderPureBasedOnFFmepg.cpp
ffmpeg_sample/simpleEncoderX265BasedOnFFmpeg/: simpleEncoderX265BasedOnFFmpeg.cpp
graphic/omniplay/: CMakeLists.txt  README.md  omniplay.cpp
knowledgearch/: multimedia_arch.md
nvidia_sample/: CMakeLists.txt  README.md  main.cpp  utils.h  video_codec_sdk_investigation.md
nvidia_sample/decoder/: .gitignore  CMakeLists.txt  main.cpp
nvidia_sample/docker/: README.md
nvidia_sample/docker/run/: run.sh
nvidia_sample/encoder/: CMakeLists.txt  README.md  video_codec_sdk_investigation.md
simpleAudioEncoderBasedOnFFmpeg/: CMakeLists.txt  Makefile
simpleEncoderBasedOnFFmepg/: CMakeLists.txt  simpleEncoderBasedOnFFmpeg.cpp
simpleEncoderBasedOnVPX/: README.md
simpleEncoderBasedOnX264/: CMakeLists.txt  README.md  simpleEncoderBasedOnX264.cpp
simpleEncoderBasedOnX265/: CMakeLists.txt  README.md
simpleEncoderPureBasedOnFFmpeg/: README.md  simpleEncoderPureBasedOnFFmepg.cpp
simpleEncoderX265BasedOnFFmpeg/: CMakeLists.txt  README.md
simpleVideoPlayerBasedOnFFmpeg/: CMakeLists.txt
