cmake_minimum_required (VERSION 2.8)
project (simpleEncoderPureBasedOnFFmpeg)
set(CUSTOM_INSTALL_DIR ${CMAKE_CURRENT_LIST_DIR}/../install)
find_library(AVCodec avcodec ${CUSTOM_INSTALL_DIR}/lib)
find_library(AVUtil avutil ${CUSTOM_INSTALL_DIR}/lib)
include_directories(${CUSTOM_INSTALL_DIR}/include)
add_executable (simpleEncoderPureBasedOnFFmpeg simpleEncoderPureBasedOnFFmepg.cpp)
target_link_libraries(simpleEncoderPureBasedOnFFmpeg "${AVCodec}" "${AVUtil}")